syntax = "proto3";

package proto;
option go_package = "./";

message VideoChunkRequest {
  uint64 video_id = 1;
  string audio_track_id = 2;
  double seek = 3;
}

message VideoMetadataRequest {
  uint64 video_id = 1;
}

message TrackLanguage {
  uint32 id = 1;
  string language = 2;
  string name = 3;
  string codec = 4;
}

message VideoMetadata {
  bytes metadata = 1;
  double video_duration = 2;
  repeated TrackLanguage text_track_languages = 3;
  repeated TrackLanguage audio_track_languages = 4;
}

message VideoTextTrackRequest {
  string track_id = 1;
}

message VideoTextTrack {
  bytes text_track = 1;
}

message VideoChunk {
  bytes data = 1;
  double start_time = 2;
  double end_time = 3;
}

service VideoService {
  rpc GetVideoChunk (VideoChunkRequest) returns (VideoChunk) {}
  rpc GetVideoMetadata (VideoMetadataRequest) returns (VideoMetadata) {}
  rpc GetVideoTextTrack (VideoTextTrackRequest) returns (VideoTextTrack) {}
}
